UI fixes - Alignment in transfer ownership and view history (#415)

--- a/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/propertyTax/Property/components/PendingAmountDue/index.scss
+++ b/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/propertyTax/Property/components/PendingAmountDue/index.scss
@@ -2,7 +2,7 @@
     color: rgba(0, 0, 0, 0.87);
     font-family: Roboto;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 28px;
     text-align: left;
   }
@@ -20,12 +20,20 @@
     color: rgba(0, 0, 0, 0.87);
     font-family: Roboto;
     font-size: 24px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 29px;
     text-align: left;
     position: relative;
     display: inline-block;
     top: 0.07em;
+  }
+
+  .footer-amount-no {
+    font-size: 24px;
+    color: rgba(0, 0, 0, 0.87);
+    position: relative;
+    top: 5px;
+    font-weight: 500;
   }
 
 .footer-button {
