--- a/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/propertyTax/Property/components/ViewHistory/index.scss
+++ b/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/propertyTax/Property/components/ViewHistory/index.scss
@@ -9,7 +9,7 @@
   .date-of-transfer {
     color: rgba(0, 0, 0, 0.87);
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 17px;
     text-align: left;
     display: inline-block;
@@ -18,7 +18,7 @@
   .owner-history {
     color: rgba(0, 0, 0, 0.87);
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 28px;
     text-align: left;
   }
